src/test/deca/syntax/valid/sansObjet/float.deca
{
    //float a = 0.1f;
    //println("a",a);
    float a =  3.4028235E38;

}