src/test/deca/syntax/invalid/sansObjet/FloatOverMaxValue.deca
{
    float a = 3.4028235E38;
    float a = 3.4028236E38;
    
}